# mlcv-assignment

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
configs/: config.yaml  config_metric.yaml  config_residual.yaml  config_uncertainty.yaml
mlcv_openset_segmentation/: benchmark.py  datamodule.py  dataset.py  dataset_oe.py  model_base.py  model_metric.py  model_residual.py  model_uncertainty.py  postprocessing.py  rpl_losses.py  test.py  test_metric_model.py  train.py  train_rpl.py  transforms.py  utils.py
mlcv_openset_segmentation/datasets/: datamodule.py  dataset_oe.py
mlcv_openset_segmentation/models/: dmlnet.py  model_base.py  model_metric.py  model_residual.py  model_uncertainty.py  rpl.py  rpl_losses.py
scripts/: compute_full_statistics.py  compute_sml_stats.py  visualize_embeddings.py
src/: datamodule.py  dataset.py  model_base.py  model_uncertainty.py  train.py  transforms.py
src/mlcv_openset_segmentation/: dataset.py  model_uncertainty.py  train.py
stats/: full_stats.pt  sml_stats.pt  test_per_class_iou.csv  train_class_distribution.csv  val_class_distribution.csv  val_per_class_iou.csv
